[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://media/textures/menu_bg.jpg" type="Texture" id=2]
[ext_resource path="res://media/textures/vf_icon.png" type="Texture" id=3]
[ext_resource path="res://media/fonts/arial.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://media/sounds/main-menu.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 4 )

[node name="Scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 0.3
anchor_bottom = 1.0
rect_min_size = Vector2( 320, 0 )
color = Color( 0, 0, 0, 0.501961 )

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 0.6
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="ColorRect"]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.6
margin_top = 10.0
custom_fonts/font = SubResource( 1 )
text = "Виртуальная экскурсия
по району размещения
тропосферного центра"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="ColorRect"]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 2

[node name="Start" type="Button" parent="ColorRect/Buttons"]
margin_top = 109.0
margin_right = 364.0
margin_bottom = 141.0
rect_min_size = Vector2( 0, 32 )
text = "Старт"

[node name="Settings" type="Button" parent="ColorRect/Buttons"]
margin_top = 151.0
margin_right = 364.0
margin_bottom = 183.0
rect_min_size = Vector2( 0, 32 )
text = "Настройки"

[node name="About" type="Button" parent="ColorRect/Buttons"]
margin_top = 193.0
margin_right = 364.0
margin_bottom = 225.0
rect_min_size = Vector2( 0, 32 )
text = "О программе"

[node name="Exit" type="Button" parent="ColorRect/Buttons"]
margin_top = 235.0
margin_right = 364.0
margin_bottom = 267.0
rect_min_size = Vector2( 0, 32 )
text = "Выйти"

[node name="MenuRect" type="ColorRect" parent="."]
visible = false
anchor_left = 0.3
anchor_right = 0.8
anchor_bottom = 1.0
margin_left = 10.0
rect_min_size = Vector2( 320, 0 )
color = Color( 0, 0, 0, 0.501961 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
[connection signal="pressed" from="ColorRect/Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="ColorRect/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="ColorRect/Buttons/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="ColorRect/Buttons/Exit" to="." method="_on_Exit_pressed"]
